设置小弹出框的位置z-index:99999,逼我该插件

--- a/web/index.html
+++ b/web/index.html
@@ -253,18 +253,18 @@
                         <div  class="box" data-tooltip="#html-content1">
                             <img src="https://pbs.twimg.com/media/CthYHkzXEAQw7qE.jpg" height="35" width="35">
                         </div>
-                        <div id="html-content1" style="display:none; z-index:99999999;">
-                            <div style="width:290px;height: 232px; background: #ffffff;z-index:99999999;">
+                        <div id="html-content1" style="display:none;">
+                            <div style="width:290px;height: 232px; background: #ffffff;">
                                 <div style="width: 290px;height: 90px;">
-                                    <img v-bind:src = res.backgroundImg width="290px;" height="90px;" v-show="true">
+                                    <img v-bind:src = information.backgroundImg width="290px;" height="90px;" v-show="true">
                                 </div>
                                 <div style="width: 72px;height: 72px;left: 12px;top: 60px;position:absolute;">
-                                    <img v-bind:src =res.headImg width="72px;" height="72px;" v-if="res.headImg">
+                                    <img v-bind:src =information.headImg width="72px;" height="72px;" v-if="information.headImg">
                                 </div>
                                 <div style="width: 185px;height: 72px;left: 80px;top: 95px;position:absolute;">
                                     <p>
-                                        <span style="font-size: 16px;color: #292f33;font-weight: 700;" v-if="res.nickname">{{res.nickname}}</span></br>
-                                        <span style="font-size: 11px;line-height:15px;color:#8899a6;">{{res.school}}</span>
+                                        <span style="font-size: 16px;color: #292f33;font-weight: 700;" v-if="information.nickname">{{information.nickname}}</span></br>
+                                        <span style="font-size: 11px;line-height:15px;color:#8899a6;">{{information.school}}</span>
                                     </p>
                                 </div>
                                 <div style="width: 20px;height: 72px;left: 257px;top: 100px;position:absolute;">
@@ -273,25 +273,25 @@
                                     </button>
                                 </div>
                                 <div style="width:290px;height: 50px;left: 12px;top: 140px;position:absolute;">
-                                    <p style="font-size: 12px;line-height:15px; color: #292f33;" v-if="res.signature">
+                                    <p style="font-size: 12px;line-height:15px; color: #292f33;" v-if="information.signature">
                                         Where the conversation begins. Follow for breaking news, special reports, RTs of our journalists and more from http://NYTimes.com .
                                     </p>
                                 </div>
 
                                 <div style="width:279px;height: 53px;top: 190px;position:absolute; padding-bottom: 10px;padding-left: 10px;padding-top: 10px;">
                                     <div style="width: 80px;float: left">
-                                        <p style="font-size: 13px;color:#8899a6; text-align:center" v-if="res.dynamic">
-                                            动态</br><span style="color:#1b95e0;font-size: 18px">{{res.dynamic}}</span>
+                                        <p style="font-size: 13px;color:#8899a6; text-align:center" v-if="information.dynamic">
+                                            动态</br><span style="color:#1b95e0;font-size: 18px">{{information.dynamic}}</span>
                                         </p>
                                     </div>
                                     <div style="width: 80px;float: left">
-                                        <p style="font-size: 13px;color:#8899a6; text-align:center" v-if="res.areLookingAt">
-                                            正在关注</br><span style="color:#1b95e0;font-size: 18px">{{res.areLookingAt}}</span>
+                                        <p style="font-size: 13px;color:#8899a6; text-align:center" v-if="information.areLookingAt">
+                                            正在关注</br><span style="color:#1b95e0;font-size: 18px">{{information.areLookingAt}}</span>
                                         </p>
                                     </div>
                                     <div style="width: 80px;float: left">
-                                        <p style="font-size: 13px;color:#8899a6; text-align:center" v-if="res.followers">
-                                            关注者</br><span style="color:#1b95e0;font-size: 18px">{{res.followers}}</span>
+                                        <p style="font-size: 13px;color:#8899a6; text-align:center" v-if="information.followers">
+                                            关注者</br><span style="color:#1b95e0;font-size: 18px">{{information.followers}}</span>
                                         </p>
                                     </div>
                                 </div>
@@ -320,7 +320,7 @@
                 <div class="row">
                     <div class="col-md-3 col-sm-6">
                         <p data-toggle="tooltip" data-placement="top" title="喜欢" style="text-align:center">
-                            <span v-if="information.reportNumTag"><span class="glyphicon glyphicon-heart" style="color: #ff0000;"></span><span style="padding-left: 6px;">{{information.likeNum?information.likeNum:0}}</span></span>
+                            <span v-if="information.praiseTag==1"><span class="glyphicon glyphicon-heart" style="color: #ff0000;"></span><span style="padding-left: 6px;">{{information.likeNum?information.likeNum:0}}</span></span>
                             <span v-else><span class="glyphicon glyphicon-heart" style="color: #8899a6;"></span><span style="padding-left: 6px;">{{information.likeNum?information.likeNum:0}}</span></span>
                         </p>
                     </div>
@@ -332,13 +332,13 @@
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <p data-toggle="tooltip" data-placement="top" title="转发" style="text-align:center">
-                            <span v-if="information.forwardingNumTag"><span class="glyphicon glyphicon-retweet" style="color: #ff0000"></span><span style="padding-left: 6px;">{{information.forwardingNum?information.forwardingNum:0}}</span></span>
+                            <span v-if="information.forwardingNumTag==1"><span class="glyphicon glyphicon-retweet" style="color: #ff0000"></span><span style="padding-left: 6px;">{{information.forwardingNum?information.forwardingNum:0}}</span></span>
                             <span v-else><span class="glyphicon glyphicon-retweet" style="color: #8899a6"></span><span style="padding-left: 6px;">{{information.forwardingNum?information.forwardingNum:0}}</span></span>
                         </p>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <p data-toggle="tooltip" data-placement="top" title="举报" style="text-align:center">
-                            <span v-if="information.praiseTag"><span class="glyphicon glyphicon-user" style="color: #ff0000"></span><span style="padding-left: 6px;">{{information.reportNum?information.reportNum:0}}</span></span>
+                            <span v-if="information.reportNumTag==1"><span class="glyphicon glyphicon-user" style="color: #ff0000"></span><span style="padding-left: 6px;">{{information.reportNum?information.reportNum:0}}</span></span>
                             <span v-else><span class="glyphicon glyphicon-user" style="color: #8899a6"></span><span style="padding-left: 6px;">{{information.reportNum?information.reportNum:0}}</span></span>
                         </p>
                     </div>
