--- a/web/index.html
+++ b/web/index.html
@@ -86,7 +86,7 @@
                                         <div style="width: 72px;height: 72px;left: 12px;top: 60px;position:absolute;">
                                             <img v-bind:src =res.headImg width="72px;" height="72px;" v-if="res.headImg">
                                         </div>
-                                        <div style="width: 185px;height: 72px;left: 80px;top: 95px;position:absolute;">
+                                        <div style="width: 185px;height: 72px;left: 85px;top: 95px;position:absolute;">
                                             <p>
                                                 <span style="font-size: 16px;color: #292f33;font-weight: 700;" v-if="res.nickname">{{res.nickname}}</span></br>
                                                 <span style="font-size: 11px;line-height:15px;color:#8899a6;">{{res.school}}</span>
@@ -99,7 +99,7 @@
                                         </div>
                                         <div style="width:290px;height: 50px;left: 12px;top: 140px;position:absolute;">
                                             <p style="font-size: 12px;line-height:15px; color: #292f33;" v-if="res.signature">
-                                                Where the conversation begins. Follow for breaking news, special reports, RTs of our journalists and more from http://NYTimes.com .
+                                                {{res.signature}}
                                             </p>
                                         </div>
 
@@ -147,25 +147,19 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-3 col-sm-6">
+                            <div class="col-md-4 col-sm-6">
                                 <p data-toggle="tooltip" data-placement="top" title="喜欢" style="text-align:center">
                                     <span v-if="res.praiseTag==1"><span class="glyphicon glyphicon-heart" style="color: #ff0000;"></span><span style="padding-left: 6px;">{{res.likeNum?res.likeNum:0}}</span></span>
                                     <span v-else><span v-on:click="evaluation(res.id,'like',$index)"><span class="glyphicon glyphicon-heart" style="color: #8899a6;"></span><span  style="padding-left: 6px;">{{res.likeNum?res.likeNum:0}}</span></span></span>
                                 </p>
                             </div>
-                            <div class="col-md-3 col-sm-6">
+                            <div class="col-md-4 col-sm-6">
                                 <p data-toggle="tooltip" data-placement="top" title="回复" style="text-align:center">
                                     <span class="glyphicon glyphicon-share-alt" style="color: #ff0000" v-if="res.reply"></span>
                                     <span class="glyphicon glyphicon-share-alt" style="color: #8899a6" v-else></span>
                                 </p>
                             </div>
-                            <div class="col-md-3 col-sm-6">
-                                <p data-toggle="tooltip" data-placement="top" title="转发" style="text-align:center">
-                                    <span v-if="res.forwardingNumTag==1"><span class="glyphicon glyphicon-retweet" style="color: #ff0000"></span><span style="padding-left: 6px;">{{res.forwardingNum?res.forwardingNum:0}}</span></span>
-                                    <span v-else><span class="glyphicon glyphicon-retweet" style="color: #8899a6"></span><span style="padding-left: 6px;">{{res.forwardingNum?res.forwardingNum:0}}</span></span>
-                                </p>
-                            </div>
-                            <div class="col-md-3 col-sm-6">
+                            <div class="col-md-4 col-sm-6">
                                 <p data-toggle="tooltip" data-placement="top" title="举报" style="text-align:center">
                                     <span v-if="res.reportNumTag==1"><span class="glyphicon glyphicon-user" style="color: #ff0000"></span><span style="padding-left: 6px;">{{res.reportNum?res.reportNum:0}}</span></span>
                                     <span v-else><span v-on:click="evaluation(res.id,'report',$index)"><span class="glyphicon glyphicon-user" style="color: #8899a6"></span><span style="padding-left: 6px;">{{res.reportNum?res.reportNum:0}}</span></span></span>
@@ -261,7 +255,7 @@
                                 <div style="width: 72px;height: 72px;left: 12px;top: 60px;position:absolute;">
                                     <img v-bind:src =information.headImg width="72px;" height="72px;" v-if="information.headImg">
                                 </div>
-                                <div style="width: 185px;height: 72px;left: 80px;top: 95px;position:absolute;">
+                                <div style="width: 185px;height: 72px;left: 85px;top: 95px;position:absolute;">
                                     <p>
                                         <span style="font-size: 16px;color: #292f33;font-weight: 700;" v-if="information.nickname">{{information.nickname}}</span></br>
                                         <span style="font-size: 11px;line-height:15px;color:#8899a6;">{{information.school}}</span>
@@ -274,8 +268,7 @@
                                 </div>
                                 <div style="width:290px;height: 50px;left: 12px;top: 140px;position:absolute;">
                                     <p style="font-size: 12px;line-height:15px; color: #292f33;" v-if="information.signature">
-                                        Where the conversation begins. Follow for breaking news, special reports, RTs of our journalists and more from http://NYTimes.com .
-                                    </p>
+                                        {{information.signature}}                                    </p>
                                 </div>
 
                                 <div style="width:279px;height: 53px;top: 190px;position:absolute; padding-bottom: 10px;padding-left: 10px;padding-top: 10px;">
@@ -318,25 +311,19 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-3 col-sm-6">
+                    <div class="col-md-4 col-sm-6">
                         <p data-toggle="tooltip" data-placement="top" title="喜欢" style="text-align:center">
                             <span v-if="information.praiseTag==1"><span class="glyphicon glyphicon-heart" style="color: #ff0000;"></span><span style="padding-left: 6px;">{{information.likeNum?information.likeNum:0}}</span></span>
                             <span v-else><span v-on:click="evaluation(information.id,'like',information.index)"><span class="glyphicon glyphicon-heart" style="color: #8899a6;"></span><span style="padding-left: 6px;">{{information.likeNum?information.likeNum:0}}</span></span></span>
                         </p>
                     </div>
-                    <div class="col-md-3 col-sm-6">
+                    <div class="col-md-4 col-sm-6">
                         <p data-toggle="tooltip" data-placement="top" title="回复" style="text-align:center">
                             <span class="glyphicon glyphicon-share-alt" style="color: #ff0000" v-if="information.reply"></span>
                             <span class="glyphicon glyphicon-share-alt" style="color: #8899a6" v-else></span>
                         </p>
                     </div>
-                    <div class="col-md-3 col-sm-6">
-                        <p data-toggle="tooltip" data-placement="top" title="转发" style="text-align:center">
-                            <span v-if="information.forwardingNumTag==1"><span class="glyphicon glyphicon-retweet" style="color: #ff0000"></span><span style="padding-left: 6px;">{{information.forwardingNum?information.forwardingNum:0}}</span></span>
-                            <span v-else><span class="glyphicon glyphicon-retweet" style="color: #8899a6"></span><span style="padding-left: 6px;">{{information.forwardingNum?information.forwardingNum:0}}</span></span>
-                        </p>
-                    </div>
-                    <div class="col-md-3 col-sm-6">
+                    <div class="col-md-4 col-sm-6">
                         <p data-toggle="tooltip" data-placement="top" title="举报" style="text-align:center">
                             <span v-if="information.reportNumTag==1"><span class="glyphicon glyphicon-user" style="color: #ff0000"></span><span style="padding-left: 6px;">{{information.reportNum?information.reportNum:0}}</span></span>
                             <span v-else><span v-on:click="evaluation(information.id,'report',information.index)"><span class="glyphicon glyphicon-user" style="color: #8899a6"></span><span style="padding-left: 6px;">{{information.reportNum?information.reportNum:0}}</span></span></span>
