--- a/web/index.html
+++ b/web/index.html
@@ -76,7 +76,7 @@
                         <div style="width: auto;height: 35px;">
                             <div style="width: 35px; float: left">
                                 <div id="def-html" class="box" data-tooltip="#html-content">
-                                    <img v-bind:src = res.headImg height="35" width="35"  data-toggle="tooltip" data-placement="top" v-if="res.headImg">
+                                    <img v-bind:src = res.headImg height="35" width="35"  class="img-circle" data-toggle="tooltip" data-placement="top" v-if="res.headImg">
                                 </div>
                                 <div id="html-content" style="display:none;">
                                     <div style="width:290px;height: 232px; background: #ffffff;">
@@ -245,7 +245,7 @@
                 <div style="width: auto;height: 35px; padding-top: 20px;">
                     <div style="width: 35px; float: left">
                         <div  class="box" data-tooltip="#html-content1">
-                            <img src="https://pbs.twimg.com/media/CthYHkzXEAQw7qE.jpg" height="35" width="35">
+                            <img src="https://pbs.twimg.com/media/CthYHkzXEAQw7qE.jpg" class="img-circle" height="35" width="35">
                         </div>
                         <div id="html-content1" style="display:none;">
                             <div style="width:290px;height: 232px; background: #ffffff;">
